Update electrek test case

--- a/packages/readabilityjs/test/test-pages/electrek/expected.html
+++ b/packages/readabilityjs/test/test-pages/electrek/expected.html
@@ -60,7 +60,7 @@
                     <!-- youtube embed -->
                 </p>
                 <P>
-                    <iframe title="Recent Videos" src="https://www.youtube.com/embed/FRTm8SPoDO8?playlist=mvDHs0LCTf8,pV0flQZQhgM,dkbUPBzFo90,R8XFbNWXp34,zMQGcVZmqao,wh5M-xjzus4,4SBwRCHeYpg,9Euynq65qus,N4uJiZmcYbc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="1000" height="563"></iframe>
+                    <iframe title="Recent Videos" src="https://www.youtube.com/embed/wh5M-xjzus4?playlist=mvDHs0LCTf8,N4uJiZmcYbc,4SBwRCHeYpg,dkbUPBzFo90,9Euynq65qus,pV0flQZQhgM,zMQGcVZmqao,R8XFbNWXp34,FRTm8SPoDO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="1000" height="563"></iframe>
                 </P>
             </div>
             <!-- .elastic-container -->
