--- a/packages/readabilityjs/test/test-pages/sciencedirect/expected.html
+++ b/packages/readabilityjs/test/test-pages/sciencedirect/expected.html
@@ -16,13 +16,13 @@
                 <div id="abstracts">
                     <h2> Abstract </h2>
                     <div id="aep-abstract-sec-id5">
-                        <p id="simple-para0005"> The “Weak Garden of Eden” model for the origin and dispersal of modern humans (Harpending<em>et al.</em>, 1993) posits that modern humans spread into separate regions from a restricted source, around 100
+                        <p id="simple-para0005"> The “Weak Garden of Eden” model for the origin and dispersal of modern humans (Harpending<em>et al.</em>, 1993) posits that modern humans spread into separate regions from a restricted source, around 100&nbsp;
                             <!-- -->&nbsp;
-                            <!-- -->ka (thousand years ago), then passed through population bottlenecks. Around 50
+                            <!-- -->ka (thousand years ago), then passed through population bottlenecks. Around 50&nbsp;
                             <!-- -->&nbsp;
                             <!-- -->ka, dramatic growth occurred within dispersed populations that were genetically isolated from each other. Population growth began earliest in Africa and later in Eurasia and is hypothesized to have been caused by the invention and spread of a more efficient Later Stone Age/Upper Paleolithic technology, which developed in equatorial Africa.
                         </p>
-                        <p id="simple-para0010"> Climatic and geological evidence suggest an alternative hypothesis for Late Pleistocene population bottlenecks and releases. The last glacial period was preceded by one thousand years of the coldest temperatures of the Later Pleistocene (∼71–70
+                        <p id="simple-para0010"> Climatic and geological evidence suggest an alternative hypothesis for Late Pleistocene population bottlenecks and releases. The last glacial period was preceded by one thousand years of the coldest temperatures of the Later Pleistocene (∼71–70&nbsp;
                             <!-- -->&nbsp;
                             <!-- -->ka), apparently caused by the eruption of Toba, Sumatra. Toba was the largest known explosive eruption of the Quaternary. Toba's volcanic winter could have decimated most modern human populations, especially outside of isolated tropical refugia. Release from the bottleneck could have occurred either at the end of this hypercold phase, or 10,000 years later, at the transition from cold oxygen isotope stage 4 to warmer stage 3. The largest populations surviving through the bottleneck should have been found in the largest tropical refugia, and thus in equatorial Africa. High genetic diversity in modern Africans may thus reflect a less severe bottleneck rather than earlier population growth.
                         </p>
