Create new newsletter if old one is deleted

--- a/packages/readabilityjs/test/test-pages/newsletters/morning-brew/expected.html
+++ b/packages/readabilityjs/test/test-pages/newsletters/morning-brew/expected.html
@@ -81,6 +81,9 @@
                                     <p>12,266.41</p>
                                 </td>
                                 <td>
+                                    <DIV>
+                                        <p>+1.27%</p>
+                                    </DIV>
                                 </td>
                             </tr>
                         </table>
@@ -102,6 +105,9 @@
                                     <p>4,110.41</p>
                                 </td>
                                 <td>
+                                    <DIV>
+                                        <p>+1.06%</p>
+                                    </DIV>
                                 </td>
                             </tr>
                         </table>
@@ -123,6 +129,9 @@
                                     <p>32,381.34</p>
                                 </td>
                                 <td>
+                                    <DIV>
+                                        <p>+0.71%</p>
+                                    </DIV>
                                 </td>
                             </tr>
                         </table>
@@ -144,6 +153,9 @@
                                     <p>3.358%</p>
                                 </td>
                                 <td>
+                                    <DIV>
+                                        <p>+4.3 bps</p>
+                                    </DIV>
                                 </td>
                             </tr>
                         </table>
@@ -165,6 +177,9 @@
                                     <p>$22,311.05</p>
                                 </td>
                                 <td>
+                                    <DIV>
+                                        <p>+3.05%</p>
+                                    </DIV>
                                 </td>
                             </tr>
                         </table>
@@ -186,6 +201,9 @@
                                     <p>$163.43</p>
                                 </td>
                                 <td>
+                                    <DIV>
+                                        <p>+3.85%</p>
+                                    </DIV>
                                 </td>
                             </tr>
                         </table>
