Make overlay element an unlikelyCandidates and give player element positive score

--- a/packages/readabilityjs/test/test-pages/gdcvault/expected.html
+++ b/packages/readabilityjs/test/test-pages/gdcvault/expected.html
@@ -1,9 +1,54 @@
 <DIV class="page" id="readability-page-1">
-    <div id="bumped">
-        <p> You've been logged out of GDC Vault since the maximum users allowed for this account has been reached. To access Members Only content on GDC Vault, please log out of GDC Vault from the computer which last accessed this account.</p>
-        <p> Click <strong><a href="http://fakehost/demo">here</a></strong> to find out about GDC Vault Membership options for more users.</p>
-        <p>
-            <a id="bumpClose">close</a>
-        </p>
+    <div id="player">
+        <iframe src="https://cdnapisec.kaltura.com/p/1670711/sp/167071100/embedIframeJs/uiconf_id/43558772/partner_id/1670711?iframeembed=true&playerId=kaltura_player_1547062087&cache_st=1547072087&width=1000&height=570&entry_id=0_6kvuqtmi&videoid=6aafd73d83118f0e6c301022186" width="1000" height="570" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" allowfullscreen="allowfullscreen"></iframe>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        <strong>Session Name:</strong>
+                    </td>
+                    <td> Parallelizing the Naughty Dog Engine Using Fibers </td>
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Speaker(s):</strong>
+                    </td>
+                    <td> Christian Gyrling </td>
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Company Name(s):</strong>
+                    </td>
+                    <td> Naughty Dog </td>
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Track / Format:</strong>
+                    </td>
+                    <td> Programming </td>
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Overview:</strong>
+                    </td>
+                    <td> This talk is a detailed walkthrough of the game engine modifications needed to make The Last of Us Remastered run at 60 fps on PlayStation 4. Topics covered will include the fiber-based job system Naughty Dog adopted for the game, the overall frame-centric engine design, the memory allocation patterns used in the title, and our strategies for dealing with locks. </td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <!-- <div id="ad_lower">
+      <div id="div-gpt-ad-rec1">
+        <script type='text/javascript'>
+        googletag.display('div-gpt-ad-rec1');
+        </script>
+       </div>
+    </div> -->
+        <section id="recommended">
+            <img src="http://fakehost/img/icon_members_only_text.png">
+            <div id="recommended_body">
+                <p><button id="load_recommended_videos">LOAD MORE RECOMMENDED VIDEOS</button>
+                </p>
+            </div>
+        </section>
     </div>
 </DIV>
